[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carla_simulation"
version = "0.1"
authors = [
  { name="Tiziano Munaro", email="munaro@fortiss.org" },
]
description = "Simulate scenarios in a parallelized CARLA environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pygame==2.1.2",
  "numpy==1.23.5",
  "matplotlib==3.5.2",
  "docker==5.0.3",
  "carla==0.9.13",
]
